--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,19 +90,13 @@ const recentActivities = allActivities.slice(0, 3)
         </div>
       </div>
 
-      {/* Get template */}
+      {/* Upload new blog */}
       <a
-        href='https://github.com/cworld1/astro-theme-pure'
+        href='/newblog'
         target='_blank'
-        class='glass-effect flex flex-row items-center gap-x-3 rounded-full border border-foreground/20 bg-background/50 px-4 py-2 text-sm backdrop-blur-md transition-all hover:bg-background/70 hover:shadow-lg'
+        class='flex flex-row items-center gap-x-4 rounded-full bg-primary/20 text-black px-6 py-3 text-base backdrop-blur-md transition-all duration-300 hover:bg-black hover:text-white hover:shadow-lg hover:scale-105 dark:bg-primary/40 dark:text-white dark:hover:bg-black dark:hover:text-white'
       >
-        <span class='relative flex items-center justify-center'>
-          <span
-            class='absolute size-2 animate-ping rounded-full border border-green-400 bg-green-400 opacity-75'
-          ></span>
-          <span class='size-2 rounded-full bg-green-400'></span>
-        </span>
-        <p class='font-medium text-foreground/90'>Get Template</p>
+        <p class='font-medium'>Upload New Blog</p>
       </a>
     </section>
 
