--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,13 +76,13 @@ const recentActivities = allActivities.slice(0, 3)
       <div class='flex flex-col items-center gap-y-4'>
         <h1 class='animated-gradient-title text-3xl' data-text={config.author}>{config.author}</h1>
         <div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
-          <Label title='China'>
+          <Label title='Shanghai, China'>
             <Icon name='location' class='size-5' slot='icon' />
           </Label>
           <Label
-            title='Source code'
+            title='GitHub'
             as='a'
-            href='https://github.com/cworld1/astro-theme-pure'
+            href='https://github.com/VapourX-ScaleLab'
             target='_blank'
           >
             <Icon name='github' class='size-5' slot='icon' />
@@ -94,7 +94,7 @@ const recentActivities = allActivities.slice(0, 3)
       <a
         href='/newblog'
         target='_blank'
-        class='flex flex-row items-center gap-x-4 rounded-full bg-primary/20 text-black px-6 py-3 text-base backdrop-blur-md transition-all duration-300 hover:bg-black hover:text-white hover:shadow-lg hover:scale-105 dark:bg-primary/40 dark:text-white dark:hover:bg-black dark:hover:text-white'
+        class='flex flex-row items-center gap-x-4 rounded-full bg-primary/20 text-black px-6 py-3 text-base backdrop-blur-md transition-all duration-300 hover:bg-black hover:text-white hover:shadow-lg hover:scale-105 dark:bg-primary/20 dark:text-white dark:hover:bg-black dark:hover:text-white'
       >
         <p class='font-medium'>Upload New Blog</p>
       </a>
