--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,8 +92,7 @@ const recentActivities = allActivities.slice(0, 3)
 
       {/* Upload new blog */}
       <a
-        href='/newblog'
-        target='_blank'
+        href='/demo'
         class='flex flex-row items-center gap-x-4 rounded-full bg-primary/20 text-black px-6 py-3 text-base backdrop-blur-md transition-all duration-300 hover:bg-black hover:text-white hover:shadow-lg hover:scale-105 dark:bg-primary/20 dark:text-white dark:hover:bg-black dark:hover:text-white'
       >
         <p class='font-medium'>Upload New Blog</p>
