upload button redirecting

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,8 @@ const recentActivities = allActivities.slice(0, 3)
 
       {/* Upload new blog */}
       <a
-        href='/demo'
+        href='https://github.com/VapourX-ScaleLab/VapourX-ScaleLab.github.io/issues'
+        target='_blank'
         class='flex flex-row items-center gap-x-4 rounded-full bg-primary/20 text-black px-6 py-3 text-base backdrop-blur-md transition-all duration-300 hover:bg-black hover:text-white hover:shadow-lg hover:scale-105 dark:bg-primary/20 dark:text-white dark:hover:bg-black dark:hover:text-white'
       >
         <p class='font-medium'>Upload New Blog</p>
