--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -26,13 +26,9 @@ const meta = {
       <h2 class='text-xl font-medium'>Feedback</h2>
       <p>
         If you have any problems, you can check <a
-          href='https://github.com/cworld1/astro-theme-pure/issues'
+          href='https://github.com/VapourX-ScaleLab/VapourX-ScaleLab.github.io/issues'
           target='_blank'>Github Issues</a
         > for community support.
-      </p>
-      <h2 class='text-xl font-medium'>News Describe (Alpha)</h2>
-      <p>
-        <a href='/docs/rss.xml' target='_blank'><Icon name='rss' /> </a>
       </p>
     </div>
   </main>
