--- a/src/pages/activities/index.astro
+++ b/src/pages/activities/index.astro
@@ -58,13 +58,13 @@ const meta = {
               <div class='mb-8'>
                 <h2 class='mb-4 flex items-center text-lg font-semibold'>
                   <Icon name='list' class='me-2' />
-                  活动类型
+                  Activity Types
                 </h2>
                 <ul class='text-bgColor flex flex-wrap gap-2'>
                   {/* 全部类型 */}
                   <li>
                     <Button 
-                      title="全部" 
+                      title="All" 
                       href="/activities" 
                       style='default'
                     />
